RC_Car_V2_FreeRTOS.cydsn/BUILD.log
--------------- Build Started: 03/20/2021 21:34:39 Project: RC_Car_V2_FreeRTOS, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Initializing Build...
cydsfit.exe -.appdatapath "C:\Users\Carlos\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\Carlos\Documents\Repos\RC_CAR_V2\RC_Car_V2_FreeRTOS.cydsn\RC_Car_V2_FreeRTOS.cyprj -d CY8C5888LTI-LP097 -s C:\Users\Carlos\Documents\Repos\RC_CAR_V2\RC_Car_V2_FreeRTOS.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Info: plm.M0038: The pin named rx_gps(0) at location P12[0] prevents usage of special purposes: I2C:SCL. (App=cydsfit)
Analog Placement...
Log: apr.M0058: The analog placement iterative improvement is 91% done. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
Warning: sta.M0021: RC_Car_V2_FreeRTOS_timing.html: Warning-1350: Asynchronous path(s) exist from "Clock_1" to "speed_in(0)_PAD". See the timing report for details. (File=C:\Users\Carlos\Documents\Repos\RC_CAR_V2\RC_Car_V2_FreeRTOS.cydsn\RC_Car_V2_FreeRTOS_timing.html)
Warning: sta.M0021: RC_Car_V2_FreeRTOS_timing.html: Warning-1350: Asynchronous path(s) exist from "speed_in(0)_PAD" to "Clock_1". See the timing report for details. (File=C:\Users\Carlos\Documents\Repos\RC_CAR_V2\RC_Car_V2_FreeRTOS.cydsn\RC_Car_V2_FreeRTOS_timing.html)
Warning: sta.M0019: RC_Car_V2_FreeRTOS_timing.html: Warning-1366: Setup time violation found in a path from clock ( CyBUS_CLK ) to clock ( Clock_2 ). (File=C:\Users\Carlos\Documents\Repos\RC_CAR_V2\RC_Car_V2_FreeRTOS.cydsn\RC_Car_V2_FreeRTOS_timing.html)
Warning: sta.M0019: RC_Car_V2_FreeRTOS_timing.html: Warning-1366: Setup time violation found in a path from clock ( CyBUS_CLK ) to clock ( UART_Jetson_IntClock ). (File=C:\Users\Carlos\Documents\Repos\RC_CAR_V2\RC_Car_V2_FreeRTOS.cydsn\RC_Car_V2_FreeRTOS_timing.html)
API Generation...
Dependency Generation...
Cleanup...
Pre-build Steps...
Compiling...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\FreeRTOS\Source -I..\FreeRTOS\Source\include -I..\FreeRTOS\Source\portable\GCC\ARM_CM3 -I..\FreeRTOS\Source\portable\MemMang -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\FreeRTOS\Source -I..\FreeRTOS\Source\include -I..\FreeRTOS\Source\portable\GCC\ARM_CM3 -I..\FreeRTOS\Source\portable\MemMang -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/i2c_ctrl.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c i2c_ctrl.c -o .\CortexM3\ARM_GCC_541\Debug\i2c_ctrl.o
i2c_ctrl.c: In function 'dequeue':
i2c_ctrl.c:80:17: warning: operation on 'queue_index' may be undefined [-Wsequence-point]
     queue_index = queue_index < 0 ? 0 : queue_index --;  // Decrease index
                 ^
i2c_ctrl.c: At top level:
i2c_ctrl.c:27:13: warning: 'process_queue' used but never defined
 static void process_queue(void);
             ^
i2c_ctrl.c:31:13: warning: 'i2c_buffer_read' defined but not used [-Wunused-function]
 static void i2c_buffer_read(uint8 slave_addr, uint8* wr_buff, uint8 wr_size, uint8* read_buffer, uint8 read_size )
             ^
i2c_ctrl.c:48:13: warning: 'i2c_buffer_write' defined but not used [-Wunused-function]
 static void i2c_buffer_write(uint8 slave_addr, uint8 *wr_buff, uint8 num_bytes)
             ^
i2c_ctrl.c:77:13: warning: 'dequeue' defined but not used [-Wunused-function]
 static void dequeue(void)
             ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\FreeRTOS\Source -I..\FreeRTOS\Source\include -I..\FreeRTOS\Source\portable\GCC\ARM_CM3 -I..\FreeRTOS\Source\portable\MemMang -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/led_ctrl.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c led_ctrl.c -o .\CortexM3\ARM_GCC_541\Debug\led_ctrl.o
led_ctrl.c: In function 'led_sel':
led_ctrl.c:84:19: warning: unused variable 'stat' [-Wunused-variable]
             uint8 stat = I2C_MasterStatus();
                   ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\FreeRTOS\Source -I..\FreeRTOS\Source\include -I..\FreeRTOS\Source\portable\GCC\ARM_CM3 -I..\FreeRTOS\Source\portable\MemMang -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/charge_meter_ctrl.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c charge_meter_ctrl.c -o .\CortexM3\ARM_GCC_541\Debug\charge_meter_ctrl.o
charge_meter_ctrl.c:29:50: error: 'CHARGER_ID' undeclared here (not in a function)
 i2c_requests_t* charger_requests = &i2c_requests[CHARGER_ID];
                                                  ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 03/20/2021 21:35:13 ---------------
